fix(timeline): darken h3 color by 20% to improve visibility

--- a/src/pages/shipment-details/components/timeline/styles.scss
+++ b/src/pages/shipment-details/components/timeline/styles.scss
@@ -36,7 +36,7 @@ section.container {
       h3 {
         font-weight: $font-regular;
         font-size: $text-sm;
-        color: $tertiary;
+        color: darken($tertiary, 20%);
       }
       p {
         font-weight: $font-bold;
